MoveArmGame version 1.1.6 (+summary на предварительном экране результатов)